anchor icon coloring on hover

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -120,8 +120,10 @@
         font-size: 15px;
         line-height: 16px;
         color: #4d4d4e;
+      }
 
-        &:hover {
+      &:hover {
+        .anchor-icon {
           color: #ffd700;
         }
       }
